stage0/tests/compile_fail/misc/interp.dg
extern "c" func puts(s: *u8) -> i32

func main() {
    let n = 5
    puts("count is ${n}")
}
